fixed a bug where the border was not aligned

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,13 @@ img {
  
 }
 
+
+
 #wrapper {
   max-width: 1200px;
   margin: 0 auto;
   /* background-color: rgba(88,115,86 ,0.8); */
-  background: rgba(63,148,91,0.8);
+  /* background: rgba(63,148,91,0.8); */
   background: rgba(0,0,9,0.9);
  
 
@@ -189,9 +191,9 @@ box-shadow: 0px 16px 47px -14px rgba(252,252,252,1);
   gap: 15px;
   grid:
     " section-name item1 item1 item1 item1 item1 item1 item1 item1 "
-    " . item2 item2 item2 item2 item3 item3  item3 item3 "
-    " . item4 item4 item4 item4 item5 item5  item5 item5 "
-    " . item6 item6 item6 item6 . . . .";
+    " borders item2 item2 item2 item2 item3 item3  item3 item3 "
+    " borders item4 item4 item4 item4 item5 item5  item5 item5 "
+    " borders item6 item6 item6 item6 . . . .";
 }
 
 .section-name {
@@ -211,20 +213,26 @@ box-shadow: 0px 16px 47px -14px rgba(252,252,252,1);
 }
 
 #about{
-  padding: 2rem 0.5rem;
-  margin-top: 4rem;
-  ;
+  
+  padding: 2rem ;
+  margin-top: 3rem;
+  
+  
   
 }
 .section-name{
+  width: 150px;
+  padding: 1rem;
   color: white;
   border-right: 4px solid white;
-  margin: 2rem 1rem;
-  min-width: 150px;
+  /* margin: 2rem 1rem; */
+  
+ 
 }
 p{
   color: white;
-  padding: 0.5rem;
+  padding: 1.5rem;
+  max-width: 1000px;
 }
 
 #contact ul{
@@ -271,15 +279,23 @@ a:hover{
 .about-me-list a:hover{
   opacity: 0.1;
 }
+#borders{
+  grid-area: borders;
+  border-right: 5px white solid;
+  height: 100%;
+  margin-right: 15px;
+  width: 150px;
+}
 
 @media screen and (max-width: 780px) {
   body {
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
   }
 
   #work{
     display: flex;
     flex-direction:column;
+    text-align: center;
   }
 
   #contact{
@@ -292,6 +308,7 @@ a:hover{
     flex-direction: column;
   }
   .section-name{
+    
     border-right: none;
     border-bottom:solid white 5px;
   }
